--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,7 @@
         Message bien envoyé !
     </div>
 
-    <div>
+    <div class="contact-container">
         <form class="contactForm">
             <label>Nom :</label>
             <input type="text" name="nom" required>
